# rp-pico-Si7021-driver

./: CMakeLists.txt  README.md
examples/: main.c
include/: si7021.h
src/: si7021.c
test/: main.c
